--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,21 +1,18 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <div>
-    <nav class="navbar-brand">Zodiax</nav>
-  </div>
-  <div class="collapse navbar-collapse">
-    <ul class="navbar-nav">
-      <li>
-        <a class="nav-link" routerLink="/account">Account</a>
-      </li>
-      <li>
-        <a class="nav-link" routerLink="/game">Play</a>
-      </li>
-      <li>
-        <a class="nav-link" routerLink="/history">History</a>
-      </li>
-      <li>
-        <a class="nav-link">Logout</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+<div class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav >Zodiax</nav>
+  <ul class="navbar-nav">
+    <li>
+      <a class="nav-link" routerLink="/account">Account</a>
+    </li>
+    <li>
+      <a class="nav-link" routerLink="/game">Play</a>
+    </li>
+    <li>
+      <a class="nav-link" routerLink="/history">History</a>
+    </li>
+    <li>
+      <a class="nav-link" routerLink="/">Logout</a>
+    </li>
+  </ul>
+</div>
+
