--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -1,5 +1,73 @@
-nav{
+.nav-bar{
+  display: grid;
+  min-height: 100px;
+  grid-auto-flow: column;
+  background-color: black;
+  grid-gap: 20px;
+  padding-left: 30px;
+  padding-right: 30px;
+  color: lawngreen;
+  text-shadow: 1px 2px 10px white;
+}
+.logo {
+  display: grid;
+  justify-content: start;
+  align-content: center;
+  font-size: 25px;
+}
+.nav-link:hover {
   color: lawngreen;
 }
+.nav-link {
+  display: grid;
+  justify-content: end;
+  align-content: center;
+  grid-auto-flow: column;
+  color: white;
+  grid-gap: 20px;
+}
+/*body {*/
+/*  font-family: sans-serif;*/
+/*}*/
+/*.container {*/
+/*  display: grid;*/
+/*  grid-auto-flow: column;*/
+/*}*/
+/*ul {*/
+/*  display: grid;*/
+/*  grid-auto-flow: column;*/
+/*  align-content: center;*/
+/*  justify-content: end;*/
+/*}*/
+/*#nav-bar {*/
+/*  display: grid;*/
+/*  grid-auto-flow: column;*/
+/*  background-color: black;*/
+/*  border-color: grey;*/
+/*  font-weight: bold;*/
+/*}*/
+/*a {*/
+/*  color: white;*/
+/*}*/
+/*.logo {*/
+/*  display: grid;*/
+/*  align-content: center;*/
+/*  justify-content: start;*/
+/*  color: lawngreen;*/
+/*  text-shadow: 5px 5px 10px white;*/
+/*  margin: auto;*/
+/*}*/
+/*ul li a {*/
+/*  font-weight: initial;*/
+/*  color: white;*/
+/*  text-shadow: 5px 5px 5px lawngreen;*/
+/*  margin: 5px;*/
+/*  overflow: hidden;*/
+/*}*/
+/*ul li a:hover {*/
+/*  color: lawngreen;*/
+/*}*/
+
+
 
 
