--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,18 +1,30 @@
-<div class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <nav >Zodiax</nav>
-  <ul class="navbar-nav">
-    <li>
-      <a class="nav-link" routerLink="/account">Account</a>
-    </li>
-    <li>
-      <a class="nav-link" routerLink="/game">Play</a>
-    </li>
-    <li>
-      <a class="nav-link" routerLink="/history">History</a>
-    </li>
-    <li>
-      <a class="nav-link" routerLink="/">Logout</a>
-    </li>
-  </ul>
-</div>
-
+<!--<div class="navbar navbar-expand-lg navbar-dark bg-dark">-->
+<!--  <nav >Zodiax</nav>-->
+<!--  <ul class="navbar-nav">-->
+<!--    <li>-->
+<!--      <a class="nav-link" routerLink="/account">Account</a>-->
+<!--    </li>-->
+<!--    <li>-->
+<!--      <a class="nav-link" routerLink="/game">Play</a>-->
+<!--    </li>-->
+<!--    <li>-->
+<!--      <a class="nav-link" routerLink="/history">History</a>-->
+<!--    </li>-->
+<!--    <li>-->
+<!--      <a class="nav-link" routerLink="/">Logout</a>-->
+<!--    </li>-->
+<!--  </ul>-->
+<!--</div>-->
+<body>
+<div class="nav-bar">
+    <div class="logo">
+      <h1>Zodiax</h1>
+    </div>
+    <div class="nav-link">
+        <a class="nav-link" routerLink="/account">Account</a>
+        <a class="nav-link" routerLink="/game">Play</a>
+        <a class="nav-link" routerLink="/history">History</a>
+        <a class="nav-link" routerLink="/">Logout</a>
+    </div>
+  </div>
+</body>
