--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -2,21 +2,19 @@
   display: grid;
   min-height: 100px;
   grid-auto-flow: column;
+  color: white;
   background-color: black;
   grid-gap: 20px;
   padding-left: 30px;
   padding-right: 30px;
-  color: lawngreen;
   text-shadow: 1px 2px 10px white;
 }
-.logo {
+#logo {
   display: grid;
   justify-content: start;
   align-content: center;
-  font-size: 25px;
-}
-.nav-link:hover {
   color: lawngreen;
+  font-size: 25px;
 }
 .nav-link {
   display: grid;
@@ -25,6 +23,12 @@
   grid-auto-flow: column;
   color: white;
   grid-gap: 20px;
+}
+.link {
+  color: white;
+}
+.nav-link:hover {
+  color: lawngreen
 }
 /*body {*/
 /*  font-family: sans-serif;*/
