--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -17,7 +17,7 @@
 <!--</div>-->
 <body>
 <div class="nav-bar">
-    <div class="logo">
+    <div id="logo">
       <h1>Zodiax</h1>
     </div>
     <div class="nav-link">
