--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,8 +1,26 @@
-.center{
-  display: flex;
+.form {
+  display: grid;
   justify-content: center;
-  align-items: center;
-  margin: 0 auto;
-  padding: 0;
+  margin-top: 50px;
+  margin-left: 500px;
+  margin-right: 500px;
+  border: 2px solid black;
+  background-color: black;
 }
+.container {
+  display: grid;
+  grid-auto-flow: row;
+  align-content: center;
+  justify-content: center;
+  max-width: 200px;
+}
+#remember {
+  padding-top: 5px;
+}
+label {
+  color: white;
+  text-shadow: 1px 2px 10px white;
+}
+
+
 
