--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,24 +1,18 @@
-<p>login works!</p>
-
-<!--<div class="center">-->
-<!--  <mat-card>-->
-<!--    <form>-->
-<!--      <mat-card-title class="center">Username</mat-card-title>-->
-<!--      <mat-form-field>-->
-<!--        <label>-->
-<!--          <input matInput placeholder="Username">-->
-<!--        </label>-->
-<!--      </mat-form-field>-->
-<!--      <mat-card-title class="center">Password</mat-card-title>-->
-<!--      <mat-form-field>-->
-<!--        <label>-->
-<!--          <input matInput type="password" placeholder="Password">-->
-<!--        </label>-->
-<!--      </mat-form-field>-->
-<!--    </form>-->
-<!--    <button class ="center" type="submit">Submit</button>-->
-<!--  </mat-card>-->
-<!--</div>-->
+<body>
+<form class="form">
+  <div class="container">
+    <label><b>Username</b></label>
+    <input type="text" placeholder="Enter Username" required>
+    <label><b>Password</b></label>
+    <input type="password" placeholder="Enter Password" required>
+    <br>
+    <button type="submit">Login</button>
+    <label id="remember">
+      <input type="checkbox" checked="checked"> Remember me
+    </label>
+  </div>
+</form>
+</body>
 
 
 
