minor css tweaks

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,13 +1,14 @@
 <body>
 <div class="nav-bar">
-    <div id="logo">
-      <h1>Zodiax</h1>
-    </div>
-    <div class="nav-link">
-        <a class="nav-link" routerLink="/account">Account</a>
-        <a class="nav-link" routerLink="/game">Play</a>
-        <a class="nav-link" routerLink="/history">History</a>
-        <a class="nav-link" routerLink="/">Logout</a>
-    </div>
+  <div id="logo">
+    <h1>Zodiax</h1>
   </div>
+  <div class="nav-link">
+    <a class="nav-link" routerLink="/game">Play</a>
+    <a class="nav-link" routerLink="/account">Account</a>
+    <a class="nav-link" routerLink="/history">History</a>
+    <a class="nav-link" routerLink="/hiscores">Hiscores</a>
+    <a class="nav-link" routerLink="/">Logout</a>
+  </div>
+</div>
 </body>
