--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -13,12 +13,15 @@
   align-content: center;
   justify-content: center;
   max-width: 200px;
+  padding-bottom: 10px;
 }
-#remember {
-  padding-top: 5px;
+#button {
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 label {
   color: white;
+  padding-top: 10px;
   text-shadow: 1px 2px 10px white;
 }
 
