--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,14 +2,10 @@
 <form class="form">
   <div class="container">
     <label><b>Username</b></label>
-    <input type="text" placeholder="Enter Username" required>
+    <input type="text" [(ngModel)]="account.name" placeholder="Enter Username" required>
     <label><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" required>
-    <br>
-    <button type="submit">Login</button>
-    <label id="remember">
-      <input type="checkbox" checked="checked"> Remember me
-    </label>
+    <input type="password" [(ngModel)]="account.password" placeholder="Password" required>
+    <button id="button" type="submit">Login</button>
   </div>
 </form>
 </body>
