--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -4,9 +4,7 @@
   grid-auto-flow: column;
   color: white;
   background-color: black;
-  grid-gap: 20px;
-  padding-left: 30px;
-  padding-right: 30px;
+  padding: 10px;
   text-shadow: 1px 2px 10px white;
 }
 #logo {
@@ -14,7 +12,8 @@
   justify-content: start;
   align-content: center;
   color: lawngreen;
-  font-size: 25px;
+  font-size: 30px;
+  padding: 10px;
 }
 .nav-link {
   display: grid;
@@ -22,13 +21,16 @@
   align-content: center;
   grid-auto-flow: column;
   color: white;
-  grid-gap: 20px;
 }
 .link {
   color: white;
 }
 .nav-link:hover {
   color: lawngreen
+}
+a.nav-link {
+  width: 100%;
+  justify-content: center;
 }
 
 
