fiddled with services no luck

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
 <form class="form">
   <div class="container">
     <label><b>Username</b></label>
-    <input type="text" [(ngModel)]="account.name" placeholder="Enter Username" required>
+    <input type="text" [(ngModel)]="account.name" placeholder="Username" required>
     <label><b>Password</b></label>
     <input type="password" [(ngModel)]="account.password" placeholder="Password" required>
     <button id="button" type="submit">Login</button>
