--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,8 @@
 @import url(~bootstrap/dist/css/bootstrap.css);
 @import url(~font-awesome/css/font-awesome.css);
-
+p {
+  display: grid;
+  grid-auto-flow: column;
+  justify-content: center;
+  align-content: center;
+}
